# enigma2-plugins-sh4

./: Makefile.am  configure.ac  genmetaindex.py
alternativesoftcammanager/CONTROL/: control
alternativesoftcammanager/meta/: plugin_alternativesoftcammanager.xml
automaticvolumeadjustment/CONTROL/: control
automaticvolumeadjustment/po/: Makefile.am
automaticvolumeadjustment/src/: plugin.py
autovolume/CONTROL/: control  postrm
autovolume/meta/: plugin_autovolume.xml
dreamexplorer/CONTROL/: control  postrm
dreamexplorer/meta/: Makefile.am  plugin_dreamexplorer.xml
dreamexplorer/src/: Makefile.am
duckba/CONTROL/: control  postrm
duckba/src/: Makefile.am  __init__.py  maintainer.info  plugin.py  readme.EN
duckba/src/icons/: Makefile.am
empanel/: Makefile.am
empanel/CONTROL/: control  postrm
empanel/meta/: Makefile.am  plugin_empanel.xml
empanel/po/: Makefile.am  ru.po
empanel/script/: Backup_Image.sh  Makefile.am
empanel/src/: Makefile.am  plugin.py
empanel/src/images/: Makefile.am
empanel/src_bin/: Makefile.am  ntpdate
empanel/src_script/: Makefile.am
epanel/CONTROL/: control  postrm
epanel/meta/: Makefile.am  plugin_epanel.xml
epanel/po/: Makefile.am  ru.po
epanel/src/: Makefile.am  emuman.py  minstall.py  plugin.py  tools.py
extrachannelselection/: Makefile.am
extrachannelselection/CONTROL/: control  postinst  postrm  preinst
extrachannelselection/Components/: EpgList-new.py  Makefile.am  ServiceList-new.py
extrachannelselection/Screens/: ChannelSelection-new.py  ChannelSelection-new2.py  Makefile.am
extrachannelselection/meta/: Makefile.am  plugin_extrachannelselection.xml
extrachannelselection/po/: Makefile.am  ru.po
extrachannelselection/src/: Makefile.am  ServiceList.py  plugin.py
extrachannelselection/src/backup/: Makefile.am
extrachannelselection/src/components/: Makefile.am
extrachannelselection/src/images/: Makefile.am
extrachannelselection/src/screens/: ChannelSelection-new.py  ChannelSelection-new2.py  Makefile.am
extrachannelselection/src/script/: Makefile.am  restore_settings.sh
hddmanager/CONTROL/: control  postrm
hddmanager/meta/: plugin_hddmanager.xml
hdmicec/: Makefile.am
hdmicec/CONTROL/: control  postrm
hdmicec/Components/: Makefile.am
hdmicec/Plugin/: Makefile.am
hdmicec/meta/: Makefile.am  plugin_hdmicec.xml
hdmicec/src/: Makefile.am
hdmicec/src/components/: Makefile.am
hdmicec/src/plugin/: Makefile.am  plugin.py
imagemanager/CONTROL/: control  postrm
imagemanager/po/: Makefile.am  ru.po
imagemanager/src/: Makefile.am  bc_en.sh  bc_ru.sh  cpn.sh  cpn_ru.sh  plugin.py
imagemanager/src/icon/: Makefile.am
imagemanager/src/lib/: Makefile.am
libgisclub/CONTROL/: control
libgisclub/meta/: Makefile.am  plugin_libgisclub.xml
libgisclub/src/Converter/: CamdInfo3.py  (+1 more)
mediaplayer2/CONTROL/: control  postrm
mediaplayer2/meta/: Makefile.am  plugin_mediaplayer2.xml
mediaplayer2/po/: Makefile.am  cs.po  pl.po  sk.po
mediaplayer2/src/: Makefile.am  __init__.py  keymap.xml  plugin.py  settings.py
mgcamd/CONTROL/: control  postinst  prerm
mgcamd/meta/: Makefile.am  plugin_mgcamd.xml
mgcamd/src/: Makefile.am
networkbrowser/CONTROL/: control  postrm
networkbrowser/meta/: plugin_networkbrowser.xml
oscam/: Makefile.am
oscam/CONTROL/: control  postinst  prerm
oscam/config/: Makefile.am  oscam.conf  oscam.server  oscam.whitelist
oscam/init/: Makefile.am  cardserver.oscam
oscam/keys/: Makefile.am
oscam/meta/: Makefile.am  plugin_oscam.xml
osdadjustment/CONTROL/: postrm
osdadjustment/meta/: plugin_osdadjustment.xml
quicksignal/CONTROL/: control  postrm
quicksignal/src/: Makefile.am
rucam/CONTROL/: control  postinst  prerm
rucam/meta/: Makefile.am  plugin_rucam.xml
rucam/src/: Makefile.am
settings36/CONTROL/: control
settings36/meta/: Makefile.am  plugin_settings36.xml
settings36/src/: Makefile.am  bouquets.tv  lamedb  userbouquet.06.tv  userbouquet.07.tv  userbouquet.08.tv  userbouquet.lybidtv.tv
settings36_4/CONTROL/: control
settings36_4/meta/: Makefile.am  plugin_settings36_4.xml
settings36_4/src/: bouquets.tv  lamedb  userbouquet.01.tv  userbouquet.02.tv  userbouquet.03.tv  userbouquet.04.tv  userbouquet.05.tv  userbouquet.09.tv  userbouquet.0a.tv  userbouquet.tricolortv.tv  userbouquet.xtra.tv
settings4/CONTROL/: control
settings4/meta/: Makefile.am  plugin_settings4w.xml
settings4/src/: bouquets.tv  lamedb  userbouquet.0a.tv  userbouquet.0b.tv
shootyourscreen/CONTROL/: control  postrm
shootyourscreen/meta/: Makefile.am  plugin_shootyourscreen.xml
shootyourscreen/po/: Makefile.am  de.po  fa.po
shootyourscreen/src/: Makefile.am
shoutcast/CONTROL/: control
shoutcast/src/: plugin.py
simplesatscan/CONTROL/: control  postrm
simplesatscan/meta/: Makefile.am  plugin_simplesatscan.xml
simplesatscan/po/: Makefile.am  ru.po
simplesatscan/src/: Makefile.am  ServiceScan.py  __init__.py  plugin.py
softcamsetup/CONTROL/: control  postinst  postrm
softcamsetup/meta/: Makefile.am  plugin_softcamsetup.xml
softcamsetup/po/: Makefile.am
softcamsetup/src/: Makefile.am  Sc.py  __init__.py  autocam.py
spzzaphistory/CONTROL/: control  postrm
spzzaphistory/meta/: Makefile.am  plugin_spzzaphistory.xml
spzzaphistory/po/: Makefile.am  es.po  ru.po
spzzaphistory/src/: LICENSE.txt  Makefile.am  maintainer.info  plugin.py
timeronoff/CONTROL/: control  postrm
timeronoff/meta/: Makefile.am  plugin_timeronoff.xml
timeronoff/po/: Makefile.am  ru.po
timeronoff/src/: Makefile.am  plugin.py
vfd_max/CONTROL/: control
vfd_max/meta/: plugin_vfd-maximal.xml
vfd_max/src/: Makefile.am
vfd_min/meta/: Makefile.am  plugin_vfd-minimal.xml
vfd_min/src/: Makefile.am  maintainer.info
vfdmax/CONTROL/: postrm
vfdmax/meta/: Makefile.am  plugin_vfd-maximal.xml
vfdmax/src/: plugin.py  translit.py
vfdmin/CONTROL/: control
vfdmin/meta/: plugin_vfd-minimal.xml
vfdmin/src/: Makefile.am
wicardd/CONTROL/: control  postinst  prerm
wicardd/meta/: Makefile.am  plugin_wicardd.xml
wicardd/src/: Makefile.am
(+41 files in other folders)
